Change Color, start redesigning things for FCA

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             display: inline-block;
             border: 4px solid transparent;
             border-radius: 50%;
-            border-top-color: #019b42;
+            border-top-color: #009cd7;
             animation: spin 1s linear infinite;
             -webkit-animation: spin 1s linear infinite;
         }
