Fixed loading style

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <style>
         #loading {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             height: 100vh; /* Fallback */
@@ -38,7 +38,7 @@
             align-items: center;
             justify-content: center;
             background: #F5F6F7;
-            z-index: 1000;
+            z-index: 3000;
         }
         .spinner {
             display: inline-block;
